[metadata]
name = cronwatch
version = 0.1.0
description = A lightweight CLI tool to monitor, log, and alert on cron job failures
author = cronwatch contributors
license = MIT
python_requires = >=3.8

[options]
packages = find:
install_requires =
    pyyaml>=6.0
    click>=8.0

[options.extras_require]
dev =
    pytest>=7.0
    pytest-mock>=3.0

[options.entry_points]
console_scripts =
    cronwatch = cronwatch.cli:main

[tool:pytest]
testpaths = tests
addopts = -v
