[metadata]
name = cronwatch
version = 0.1.0
description = A lightweight CLI tool to monitor, log, and alert on cron job failures
author = cronwatch contributors
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/cronwatch/cronwatch
python_requires = >=3.8
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
install_requires =
    pyyaml>=6.0
    click>=8.0

[options.extras_require]
dev =
    pytest>=7.0
    pytest-mock>=3.0

[options.entry_points]
console_scripts =
    cronwatch = cronwatch.cli:main

[tool:pytest]
testpaths = tests
addopts = -v
